--- a/src/main/java/views/workbudget/WorkBudgetCreateView.form
+++ b/src/main/java/views/workbudget/WorkBudgetCreateView.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="containerPanel" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="816"/>
+      <xy x="20" y="20" width="762" height="870"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -24,7 +24,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <nested-form id="1c22a" form-file="views/workbudget/stages/ClientSearchingStage.form">
+          <nested-form id="a35da" form-file="views/workbudget/stages/ClientSearchingStage.form" binding="clientSearchingStage">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -55,24 +55,24 @@
         <properties/>
         <border type="none"/>
         <children>
-          <nested-form id="8c383" form-file="views/workbudget/stages/ContentListStage.form">
+          <nested-form id="9aa3" form-file="views/workbudget/stages/ContentListStage.form" binding="contentListStage">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
           </nested-form>
         </children>
       </grid>
-      <grid id="42dd2" binding="finalPriceStageContainer" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
+      <grid id="42dd2" binding="finalPriceStageContainer" layout-manager="GridBagLayout">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="true"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <nested-form id="f6d43" form-file="views/workbudget/stages/FinalPriceStage.form">
+          <nested-form id="89494" form-file="views/workbudget/stages/FinalPriceStage.form" binding="finalPriceStage1" default-binding="true">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
           </nested-form>
         </children>
