--- a/src/main/java/views/workbudget/stages/FinalPriceStage.form
+++ b/src/main/java/views/workbudget/stages/FinalPriceStage.form
@@ -11,7 +11,7 @@
       <grid id="4cf31" binding="costContainer" layout-manager="GridLayoutManager" row-count="2" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none" title="Costo del presupuesto"/>
@@ -26,42 +26,46 @@
           </component>
           <component id="e8a3e" class="javax.swing.JTextField" binding="materialsTextField">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
             <properties>
               <columns value="12"/>
+              <editable value="false"/>
             </properties>
           </component>
           <component id="e276b" class="javax.swing.JTextField" binding="totalCostsTextField">
             <constraints>
-              <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
             <properties>
               <columns value="12"/>
+              <editable value="false"/>
             </properties>
           </component>
           <component id="5dcaf" class="javax.swing.JTextField" binding="logisticsTextField">
             <constraints>
-              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
             <properties>
               <columns value="12"/>
+              <editable value="false"/>
             </properties>
           </component>
           <component id="b241c" class="javax.swing.JTextField" binding="placingTextField">
             <constraints>
-              <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
             <properties>
               <columns value="12"/>
+              <editable value="false"/>
             </properties>
           </component>
           <component id="efe3c" class="javax.swing.JLabel">
@@ -122,7 +126,7 @@
         <properties/>
         <border type="none" title="Presupuesto final"/>
         <children>
-          <component id="9e49f" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="9e49f" class="javax.swing.JTextField" binding="profitTextField">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -154,17 +158,19 @@
               <text value="Precio Final"/>
             </properties>
           </component>
-          <component id="839cc" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+          <component id="839cc" class="javax.swing.JTextField" binding="finalPriceTextField">
             <constraints>
               <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <editable value="false"/>
+            </properties>
           </component>
           <component id="29b0e" class="javax.swing.JSeparator">
             <constraints>
-              <grid row="0" column="2" row-span="2" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="2" row-span="2" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <enabled value="true"/>
@@ -201,7 +207,7 @@
             <properties/>
             <border type="none" title="Seña"/>
             <children>
-              <component id="67500" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+              <component id="67500" class="javax.swing.JTextField" binding="depositTextField">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -227,7 +233,7 @@
             <properties/>
             <border type="none" title="Saldo"/>
             <children>
-              <component id="6ca84" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+              <component id="6ca84" class="javax.swing.JTextField" binding="balanceTextField">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
