--- a/src/main/java/views/budget/cuttingService/CuttingServiceFormView.form
+++ b/src/main/java/views/budget/cuttingService/CuttingServiceFormView.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="containerPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1094" height="400"/>
+      <xy x="20" y="20" width="1102" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -128,14 +128,21 @@
               <text value="Precio final:"/>
             </properties>
           </component>
-          <component id="5029a" class="javax.swing.JTextArea" binding="finalTextArea">
+          <scrollpane id="2b034">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
-          </component>
+            <border type="none"/>
+            <children>
+              <component id="5029a" class="javax.swing.JTextArea" binding="finalTextArea">
+                <constraints/>
+                <properties>
+                  <focusTraversalPolicyProvider value="false"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
       <component id="7699a" class="javax.swing.JButton" binding="addCuttingServiceButton">
@@ -172,7 +179,7 @@
           </component>
         </children>
       </grid>
-      <grid id="ec5cf" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="ec5cf" binding="descriptionContainer" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -194,7 +201,12 @@
                 <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <focusTraversalPolicyProvider value="true"/>
+              <lineWrap value="true"/>
+              <nextFocusableComponent value="52ff7"/>
+              <wrapStyleWord value="true"/>
+            </properties>
           </component>
         </children>
       </grid>
