--- a/src/main/java/views/workbudget/stages/FinalPriceStage.form
+++ b/src/main/java/views/workbudget/stages/FinalPriceStage.form
@@ -213,7 +213,9 @@
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <editable value="false"/>
+                </properties>
               </component>
               <component id="e1e3" class="javax.swing.JLabel">
                 <constraints>
@@ -239,7 +241,9 @@
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <editable value="false"/>
+                </properties>
               </component>
               <component id="e6e2d" class="javax.swing.JLabel">
                 <constraints>
