--- a/src/main/java/views/workbudget/WorkBudgetCreateView.form
+++ b/src/main/java/views/workbudget/WorkBudgetCreateView.form
@@ -77,14 +77,20 @@
           </nested-form>
         </children>
       </grid>
-      <grid id="8ac7" binding="clientSideInfoStage" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="8ac7" binding="clientSideInfoStageContainer" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
-        <children/>
+        <children>
+          <nested-form id="b806e" form-file="views/workbudget/stages/ClientSideInfoStage.form" binding="clientSideInfoStage">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </nested-form>
+        </children>
       </grid>
     </children>
   </grid>
